<resources>
    <string name="app_name">SpliP Connected</string>
    <string name="boton_login">Sign In</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="select_group">Select the group you want to interact with.</string>
    <string name="change_language">Change language</string>
    <string name="posible_languages">Basque, Spanish or English</string>
    <string name="change_style">Change style</string>
    <string name="posible_styles">Dark or Normal</string>
    <string name="plus_grupo">Add group</string>
    <string name="plus_person">Add person</string>
    <string name="name_placeholder">Name</string>
    <string name="select_currency">Select currency</string>
    <string name="add_expense">Add expense</string>
    <string name="add_payment">Add payment</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="of">Of</string>
    <string name="settle_accounts">Settle accounts</string>
    <string name="titulo_noti_ajuste">"The account settling has been done successfully. "</string>
    <string name="cuerpo_noti_ajuste">Account setting done.</string>
    <string name="desplegar_ajustes">Deploy</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Empty list</string>
    <string name="no_integrantes">It doesn\'t have any members yet.</string>
    <string name="EnterNameCurrency">Enter name and currency</string>
    <string name="enterName">Enter name</string>
    <string name="grupo_existe">There is other group with that name.</string>
    <string name="logout">Log Out</string>
    <string name="volver_login">Return to login page</string>
    <string name="delete_group">Do you want to delete the group?</string>
    <string name="confirm">Confirm</string>
    <string name="persona_existe">There is is other person with that name.</string>
    <string name="delete_person">Do you want to delete person?</string>
    <string name="explicacion_add_grupo">To share expenses</string>
    <string name="exp_add_gasto">Expense to share</string>
    <string name="exp_add_pago">Who to whom?</string>
    <string name="list_expenses">List expenses</string>
    <string name="lista_pagos">List payments</string>
    <string name="exp_list_gstos">What did we spend on?</string>
    <string name="exp_list_pagos">What payments between us?</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Yo have not an account yet?</string>
    <string name="repeat_password">Repeat password</string>
    <string name="fill_fields">Fill in all the fields.</string>
    <string name="invalid_mail">Enter a valid email.</string>
    <string name="pass_dont_match">Passwords do not match.</string>
    <string name="user_exist">User already exists.</string>
    <string name="really_exit">Really exit?</string>
    <string name="really_exit_long">Are you sure you want to exit?</string>
    <string name="Email">Email</string>
    <string name="balance">Balance</string>
    <string name="payments">Payments</string>
    <string name="expenses">Expenses</string>
    <string name="Date">Date</string>
    <string name="normal">Normal</string>
    <string name="style_changed_to">Style changed to:</string>
    <string name="English">English</string>
    <string name="Euskera">Basque</string>
    <string name="Spanish">Spanish</string>
    <string name="language_changed_to">Language changed to:</string>
    <string name="incorrect_cred">Incorrect credentials.</string>
    <string name="added_expense">Added expense</string>
    <string name="added_payment">Added payment.</string>
    <string name="select_lenguage">Select language</string>
    <string name="select_style">Select style</string>
    <string name="dark">Dark</string>
    <string name="delete_expense">Do you want to delete the expense?</string>
    <string name="delete_payment">Do you want to delete the payment?</string>
    <string name="Titulo">Tittle</string>
    <string name="NotiFirebase">Remember to keep up with your expenses</string>
    <string name="map_expenses">Map expenses</string>
    <string name="exp_map_expenses">Marker for each expense</string>
</resources>