<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.Login">

    <EditText
        android:id="@+id/ePassword"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/borde_edit_text"
        android:drawableStart="@drawable/password"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:text="admin"
        app:layout_constraintBottom_toTopOf="@+id/bSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eUsername"
        app:layout_constraintVertical_bias="0.129" />


    <EditText
        android:id="@+id/eUsername"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/borde_edit_text"
        android:drawableStart="@drawable/persona"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/username_placeholder"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:text="admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:text="@string/boton_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <Button
        android:id="@+id/bSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/gris_roto"
        android:text="@string/sign_up"
        android:textColor="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSignIn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:tint='@color/white'
        android:visibility="visible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/settings"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:tint='@color/white'
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/bStyle"
        app:layout_constraintStart_toStartOf="@+id/bStyle"
        app:srcCompat="@drawable/language"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:tint='@color/white'
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/bMail"
        app:layout_constraintStart_toStartOf="@+id/bMail"
        app:srcCompat="@drawable/style"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tChangeLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/change_language"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/bLanguage"
        app:layout_constraintTop_toTopOf="@+id/bLanguage" />

    <TextView
        android:id="@+id/tPosibleLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/posible_languages"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/bLanguage"
        app:layout_constraintTop_toBottomOf="@+id/tChangeLanguages" />

    <TextView
        android:id="@+id/tChangeStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/change_style"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/bStyle"
        app:layout_constraintTop_toTopOf="@+id/bStyle" />

    <TextView
        android:id="@+id/tPosibleStyles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/posible_styles"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/bStyle"
        app:layout_constraintTop_toBottomOf="@+id/tChangeStyle" />

    <TextView
        android:id="@+id/tNoCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/no_account"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/bSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>