<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.MainGrupo">

    <TextView
        android:id="@+id/tExpAddPersona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/explicacion_add_grupo"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tPlusPersona"
        app:layout_constraintTop_toBottomOf="@+id/tPlusPersona" />

    <TextView
        android:id="@+id/tExpListGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/exp_list_gstos"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/tListGastos"
        app:layout_constraintTop_toBottomOf="@+id/tListGastos" />

    <TextView
        android:id="@+id/tExpListPagos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/exp_list_pagos"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/tListPagos"
        app:layout_constraintTop_toBottomOf="@+id/tListPagos" />

    <TextView
        android:id="@+id/tExpAddGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/exp_add_gasto"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tAddGasto"
        app:layout_constraintTop_toBottomOf="@+id/tAddGasto" />

    <TextView
        android:id="@+id/tExpAddPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/exp_add_pago"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tAddPago"
        app:layout_constraintTop_toBottomOf="@+id/tAddPago" />

    <ListView
        android:id="@+id/lPersonas"
        android:layout_width="376dp"
        android:layout_height="543dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        tools:listitem="@layout/persona_item"/>

    <LinearLayout
        android:id="@+id/lVacia"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_width="376dp"
        android:layout_height="543dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/empty_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/person_off" />

        <TextView
            android:id="@+id/emptyMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.3"
            android:text="@string/empty"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="20sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bOtions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:visibility="visible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/left"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bImport"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:visibility="visible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:fabCustomSize="40dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/tGrupo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tGrupo"
        app:maxImageSize="22dp"
        app:srcCompat="@drawable/download"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:visibility="visible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/lupa"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bAddGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/bPlusPerson"
        app:layout_constraintEnd_toEndOf="@+id/bPlusPerson"
        app:srcCompat="@drawable/compra"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bAddPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/bAddGasto"
        app:layout_constraintEnd_toEndOf="@+id/bAddGasto"
        app:srcCompat="@drawable/flecha_derecha"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tAddPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/add_payment"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/bAddPago"
        app:layout_constraintTop_toTopOf="@+id/bAddPago" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bPlusPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/bOtions"
        app:layout_constraintEnd_toEndOf="@+id/bOtions"
        app:srcCompat="@drawable/add_person_white"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bVerGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/bVer"
        app:layout_constraintStart_toStartOf="@+id/bVer"
        app:srcCompat="@drawable/compra"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bVerPagos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/bVerGastos"
        app:layout_constraintStart_toStartOf="@+id/bVerGastos"
        app:srcCompat="@drawable/flecha_derecha"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bVerGastosLocalizados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:visibility="invisible"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/bVerPagos"
        app:layout_constraintStart_toStartOf="@+id/bVerPagos"
        app:srcCompat="@drawable/location"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tPlusPersona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/plus_person"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/bPlusPerson"
        app:layout_constraintTop_toTopOf="@+id/bPlusPerson" />

    <TextView
        android:id="@+id/tListGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/list_expenses"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/bVerGastos"
        app:layout_constraintTop_toTopOf="@+id/bVerGastos" />

    <TextView
        android:id="@+id/tListPagos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/lista_pagos"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/bVerPagos"
        app:layout_constraintTop_toTopOf="@+id/bVerPagos" />

    <TextView
        android:id="@+id/tMapGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/map_expenses"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/bVerGastosLocalizados"
        app:layout_constraintTop_toTopOf="@+id/bVerGastosLocalizados" />

    <TextView
        android:id="@+id/tExpMapGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/exp_map_expenses"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/tMapGastos"
        app:layout_constraintTop_toBottomOf="@+id/tMapGastos" />

    <TextView
        android:id="@+id/tAddGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/add_expense"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/bAddGasto"
        app:layout_constraintTop_toTopOf="@+id/bAddGasto" />

    <Button
        android:id="@+id/bAjustarCuentas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/settle_accounts"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>