<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoPersona">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/flecha_izquierda"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/guardar"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/eNombre"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/borde_edit_text"
        android:drawableStart="@drawable/money"
        android:ems="10"
        android:hint="@string/enterName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/persona" />

    <LinearLayout
        android:id="@+id/linearVertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:divider="@drawable/distancia_linear_layout"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@+id/bGuardar"
        app:layout_constraintEnd_toEndOf="@+id/eNombre"
        app:layout_constraintStart_toStartOf="@+id/eNombre"
        app:layout_constraintTop_toBottomOf="@+id/eNombre">

        <LinearLayout
            android:id="@+id/linearHbalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_edit_text"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tBalancePersona"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="15dp"
                android:text="@string/balance"
                android:textAlignment="textStart"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tBalance"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="15dp"
                android:text="00,00 €"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearHgastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_edit_text"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tGastosTexto"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="15dp"
                android:text="@string/expenses"
                android:textAlignment="textStart"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tGastos"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="15dp"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearHpagos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_edit_text"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tPagosTexto"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="15dp"
                android:text="@string/payments"
                android:textAlignment="textStart"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tPagosInt"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingEnd="15dp"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>